--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -138,7 +138,7 @@
     "LeadSummaryScreen",
     "SubmittedLeadScreen",
     "SubmittedLeadScreen_1",
-    "SubmittedLeadScreen_2",
+    "QuotedSOldLeads",
     "ViewDetailsScreen",
     "ChatScreen",
     "Screen1"
