--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -137,7 +137,7 @@
     "ImageUploadScreen",
     "LeadSummaryScreen",
     "SubmittedLeadScreen",
-    "SubmittedLeadScreen_1",
+    "RejectedLeads",
     "QuotedSOldLeads",
     "ViewDetailsScreen",
     "ChatScreen",
