--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -648,9 +648,22 @@ LeadListScreen As screen:
             Fill: =RGBA(54, 176, 75, 1)
             Font: =Font.Arial
             HoverFill: =RGBA(75, 125, 6, 1)
-            OnSelect: |-
-                =UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:VarLoggedInUser.FullName,StatusDate:Now()});
-                LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
+            OnSelect: |
+                =UpdateIf(
+                    LeadInformations,
+                    ID = glryleadlistLS.Selected.ID,
+                    {
+                        LeadStatus: "InProgress",
+                        QQTeamName: VarLoggedInUser.FullName,
+                        StatusDate: Now(),
+                        QQTeamEmail:VarLoggedInUser.Email
+                    }
+                );
+                LeadInProgress.Run(
+                    glryleadlistLS.Selected.Email,
+                    glryleadlistLS.Selected.LeadTrackingNumber,
+                    VarLoggedInUser.FullName
+                );
                 Navigate(LeadScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
