--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -217,6 +217,7 @@ DashboardScreen As screen:
                     DisplayMode: |-
                         =If(toggleYearDS.TrueText<>toggleYearDS.FalseText,DisplayMode.Edit,DisplayMode.Disabled)
                         //DisplayMode.Edit
+                        //Countrows(
                     FalseFill: =Color.Black
                     FalseText: |-
                         =//LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On')) &"-"& Year(Now())
