--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -832,7 +832,7 @@ ScopeScreen As screen:
                 Size: =14
                 Text: |-
                     =
-                    "All required fields are mandatory"
+                    "All mandatory fields to be filled."
                 Width: =Parent.Width
                 ZIndex: =2
 
