--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1408,7 +1408,7 @@ EstimateScreen As screen:
                         //CboxCommunicatedtoCustomer.Value = true,
                         VarPhonenumbererrormessage,"Customer phone number should be 10 digits.",
                      //   "All required fields are mandatory",
-                        "All required fields are mandatory"
+                        "All mandatory fields to be filled."
                     )
                 Width: =Parent.Width
                 ZIndex: =2
