--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1889,7 +1889,7 @@ LeadSummaryScreen As screen:
                                     AdditionalExpensesRequired: cboxAELSS.Value,
                                     TravelRequired: cboxTravelRequiredLSS.Value,
                                     CommunicatedToCustomer: CboxCCLSS.Value,
-                                    'CustomerName ': lblCustomerNameLSS.Text,
+                                    'CustomerName ': VarCustomerNameSummary,
                                     'CustomerContact ': lblContactNumber_1.Text,
                                     TotalEstimatedExpense: IntxtTotalEstimatedExpenseLSS.Text,
                                     TotalEstimatedHoursofTravel: intxtTotalEstimatedHoursofTravelLSS.Text,
