--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1944,6 +1944,10 @@ LeadSummaryScreen As screen:
                                 VarNotificationloding,
                                 false
                             );
+                              Set(
+                                VarErrorPopup,
+                                false
+                            ),
                             Set(
                                 VarNotificationSuccess,
                                 true
